# ws_framework

./: .gitignore  test.ipynb
src/abb_gofa_description/: CMakeLists.txt  package.xml
src/abb_gofa_description/config/: abb_gofa_controller.yaml  cap_openner_controller.yaml  display_gofa.rviz  egp64_controller.yaml  pipettle_controller.yaml
src/abb_gofa_description/launch/: bringup_gofa.launch.py  bringup_gofa_openner.launch.py  display_egp64.launch.py  display_gofa.launch.py  display_pipettle.launch.py
src/abb_gofa_description/meshes/NMR/: NMR.dae
src/abb_gofa_description/meshes/cap_openner/: gripper_base.dae  gripper_link.dae  left_gripper.dae  openner_base.dae  right_gripper.dae
src/abb_gofa_description/meshes/egp64/: connection.dae
src/abb_gofa_description/meshes/executor_bracket/: executor_bracket.dae
src/abb_gofa_description/meshes/pipettle/: pipettle_base.dae  pipettle_clicker.dae  pipettle_link.dae  pipettle_nib.dae
src/abb_gofa_description/urdf/abb_gofa/: abb_gofa.urdf.xacro  abb_gofa_macro.urdf.xacro  abb_gofa_ros2_control.urdf.xacro
src/abb_gofa_description/urdf/cap_openner/: cap_openner.urdf  cap_openner.urdf.xacro  cap_openner_ros2_control.urdf.xacro
src/abb_gofa_description/urdf/egp64/: egp64.urdf.xacro  egp64_ros2_control.urdf.xacro
src/abb_gofa_description/urdf/pipettle/: pipettle.urdf  pipettle.urdf.xacro  pipettle_ros2_control.urdf.xacro
src/abb_gofa_description/world/: gofa.world
src/abb_gofa_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/abb_gofa_moveit_config/config/: abb_gofa.ros2_control.xacro  abb_gofa.srdf  abb_gofa.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/abb_gofa_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/arm_workflow/: CMakeLists.txt  package.xml
src/arm_workflow/config/: workflow_steps.json  workflow_steps.yaml  workflow_steps_egp64.json  workflow_steps_pipettle.json  workflow_steps_tube.json
src/arm_workflow/include/arm_workflow/: AttachClient.hpp  DetachClient.hpp  Egp64Client.hpp  MoveArmCartesianClient.hpp  MoveArmClient.hpp  MoveArmJointClient.hpp  OpennerClient.hpp  PipettleClient.hpp  utiles.hpp  workflow_step.hpp
src/arm_workflow/launch/: launch_actions.launch.py
src/arm_workflow/src/: DetachServer.cpp  OperateServer.cpp  WorkFlowController.cpp  utiles.cpp
src/arm_workflow/src/client/: AttachClient.cpp  DetachClient.cpp  Egp64Client.cpp  MoveArmCartesianClient.cpp  MoveArmClient.cpp  MoveArmJointClient.cpp  OpennerClient.cpp  PipettleClient.cpp  TestClient.cpp
src/arm_workflow/src/server/: AttachServer.cpp  MoveArmCartesianServer.cpp  MoveArmJointServer.cpp  MoveArmServer.cpp
src/arm_workflow/src/utiles/: utiles.cpp
src/gazebo_attach_interfaces/: CMakeLists.txt  package.xml
src/gazebo_attach_interfaces/action/: Attach.action  ListLinks.action  SetStatic.action
src/gazebo_attach_interfaces/srv/: Detach.srv  SetStatic.srv
src/gazebo_attach_plugin/: CMakeLists.txt  package.xml
src/gazebo_attach_plugin/include/gazebo_attach_plugin/: link_attacher_plugin.h
src/gazebo_attach_plugin/src/: attach_detach_client.cpp  link_attacher_plugin.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: Attach.action  MoveArm.action  MoveArmCartesian.action  MoveArmJoint.action  Operate.action
