<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_attach_plugin</name>
  <version>0.0.0</version>
  <description>Gazebo plugin for attaching and detaching links via ROS2 services.</description>
  <maintainer email="dongxuduan888@gmail.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_attach_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

